fix limits page cutoff

--- a/client/css/desktop.css
+++ b/client/css/desktop.css
@@ -30,6 +30,10 @@ margin-top: -20px;
 margin-bottom: 60px;
 }
 
+.limitsPageBackground {
+margin-bottom: 40px;
+}
+
 .icon {
     font-size: 4em !important; /*size whatever you like*/
 
